# Pinn-tracking-control-wind

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  run_demo.py  run_gazebo.sh
controllers/: ilqr_controller.py  lqr_controller.py
docker/: entrypoint.sh
evaluation/: metrics.py  plot_results.py
experiments/: exp1_generalization.py
models/: pinn_dynamics.py  turtlebot_physics.py
results/: exp1_results.json  training_history.json
simulation/: python_sim.py
simulation/gazebo_env/: CMakeLists.txt  package.xml
simulation/gazebo_env/launch/: uav_sim.launch.py
simulation/gazebo_env/scripts/: data_collector_node.py
simulation/gazebo_env/worlds/: wind_template.world
training/: loss_functions.py  train_pinn.py
